[package]
name = "jito-grpc-client"
version = "1.0.0"
edition = "2024"
authors = ["Steven Lu Song Gao <steven.lusong@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/stevenlusonggao/jito_grpc_client"
documentation = "https://docs.rs/jito-grpc-client"
description = "Client to send transactions to a Jito blockengine node via gRPC connections"

[dependencies]
solana-commitment-config = "3.0"
solana-transaction = {version = "3.0", features=["bincode"]}
thiserror = "2"
futures-timer = "3"
tokio = "1"
futures = "0.3"
anyhow = "1"
log = "0.4"
rand = "0.9"
tonic = {version = "0.14", features=["channel","tls-ring", "tls-aws-lc", "tls-native-roots"]}
tonic-prost = "0.14"
prost-types = "0.14"
prost = "0.14"
bincode = "1"
rustls = {version = "0.23", features=["ring"]}
webpki-roots = "1.0.2"

[build-dependencies]
tonic-prost-build = "0.14"
protobuf-src = "1"

[dev-dependencies]
solana-keypair = "3.0"
solana-message = "3.0"
solana-program = "3.0"
solana-system-interface = {version = "2.0", features=["bincode"]}
tokio = "1"
serial_test = "3.2"
